[package]
name = "oxide"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# common
libc = "0.2.184"
memmap2 = "0.9.10"
rustc-hash = "2.1.2"


# stable: optional
rayon = { version = "1.11.0", optional = true }
miette = { version = "7.6.0", optional = true }
thiserror = { version = "2.0.18", optional = true }

[features]
default = ["stable"]
ablaze = []
stable = ["rayon", "miette", "thiserror"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
